addons/editor-dark-mode/experimental_editor.css
/* ... */
[class*="delete-button_delete-button-visible_"],
[class*="filter_filter_"]:focus-within {
  box-shadow: 0 0 0 2px var(--editorDarkMode-primary-transparent35);
}
[class*="color-picker_active-swatch_"],
[class*="question_question-input_"] > input:focus {
  border-color: var(--editorDarkMode-primary);
  box-shadow: 0 0 0 3px var(--editorDarkMode-primary-transparent35);
}
[class*="action-menu_main-button_"] {
  box-shadow: 0 0 0 4px var(--editorDarkMode-primary-transparent35);
}
[class*="input_input-form_"]:not([class*="project-title-input_title-field_"]):not(
    .sa-find-input,
    .sa-float-bar-input
  ):focus,
[class*="input_input-form_"]:focus,
[class*="sprite-selector-item_sprite-selector-item_"][class*="sprite-selector-item_is-selected_"],
[class*="stage-selector_stage-selector_"][class*="stage-selector_is-selected_"],
[class*="custom-procedures_option-card_"]:hover {
  border-color: var(--editorDarkMode-primary);
  box-shadow: 0 0 0 4px var(--editorDarkMode-primary-transparent35);
}
[class*="action-menu_main-button_"]:hover {
  box-shadow: 0 0 0 6px var(--editorDarkMode-primary-transparent35);
}
[class*="extension-button_radiate_"]::before,
[class*="extension-button_radiate_"]::after,
[class*="library-item_radiate_"]::before,
[class*="library-item_radiate_"]::after {
  animation-name: sa-radiate;
  --radiate-color: var(--editorDarkMode-primary);
}
@keyframes sa-radiate {
  0% {
    box-shadow: 0 0 0 0 var(--radiate-color); /* for browsers that don't support color-mix */
    box-shadow: 0 0 0 0 color-mix(in srgb, var(--radiate-color) 70%, transparent);
  }
  100% {
    box-shadow: 0 0 0 20px transparent;
  }
}
[class*="dial_gauge-path_"] {
  fill: var(--editorDarkMode-primary-transparent35);
  stroke: var(--editorDarkMode-primary);
}
[class*="delete-confirmation-prompt_label_"],
[class*="stage-selector_stage-selector_"][class*="stage-selector_is-selected_"] [class*="stage-selector_header-title_"],
[class*="prompt_button-row_"] button[class*="prompt_ok-button_"],
[class*="record-modal_button-row_"] button[class*="record-modal_ok-button_"] {
  color: var(--editorDarkMode-primary-text);
}
[class*="extension-button_extension-button-icon_"],
[class*="delete-button_delete-icon_"],
[class*="action-menu_main-button_"]:not(:hover) [class*="action-menu_main-icon_"],
[class*="action-menu_more-button_"]:not(:hover) [class*="action-menu_more-icon_"],
[class*="paint-editor_bitmap-button-icon_"] {
  filter: var(--editorDarkMode-primary-filter);
}
[class*="tool-select-base_mod-tool-select_"][class*="tool-select-base_is-selected_"]
  [class*="tool-select-base_tool-select-icon_"],
.sa-paint-snap-button[data-enabled="true"] .sa-paint-snap-image,
.sa-onion-button[data-enabled="true"] .sa-onion-image {
  filter: var(--editorDarkMode-primary-filter2);
}
[class*="delete-confirmation-prompt_arrow-container_"] [class*="delete-confirmation-prompt_delete-icon_"] {
  filter: var(--editorDarkMode-primary-iconFilter);
}
[class*="action-menu_more-buttons-outer_"],
[class*="action-menu_more-button_"] {
  background-color: var(--editorDarkMode-primary-variant);
}
[class*="audio-trimmer_selector_"] [class*="audio-trimmer_trim-line_"] {
  border-color: var(--editorDarkMode-primary-variant);
}
/* Don't affect ask prompt: */
[class*="question_question-input_"] [class*="input_input-form_"]:hover,
[class*="question_question-container_"] /* <-- specificity */ [class*="question_question-input_"] [class*="input_input-form_"]:focus {
  border-color: #855cd6;
}
[class*="question_question-container_"] /* <-- specificity */ [class*="question_question-input_"] [class*="input_input-form_"]:focus {
  box-shadow: 0 0 0 4px rgba(133, 92, 214, 0.35);
}

/* Text and icon highlight color */
.sa-editor a:link,
[class*="gui_tab_"][class*="gui_is-selected_"],
div[class*="delete-confirmation-prompt_body_"] /* <-- specificity */ [class*="delete-confirmation-prompt_button-row_"] button,
[class*="dropdown_dropdown_"],
[class*="record-modal_playing-text_"],
[class*="record-modal_button-row_"] button,
.sa-debugger-tabs li.sa-debugger-tab-selected {
  color: var(--editorDarkMode-highlightText);
}
[class*="gui_tab_"][class*="gui_is-selected_"] img,
[class*="toggle-buttons_button_"][aria-pressed="true"] > img,
[class*="sprite-info_is-active_"] [class*="sprite-info_icon_"],
[class*="delete-confirmation-prompt_button-row_"] [class*="delete-confirmation-prompt_delete-icon_"],
[class*="fixed-tools_button-group-button-icon_"],
[class*="color-picker_swap-button_"] [class*="labeled-icon-button_edit-field-icon_"],
[class*="dropdown_dropdown-icon_"],
[class*="sound-editor_undo-icon_"],
[class*="sound-editor_redo-icon_"],
[class*="sound-editor_tool-button_"] img,
[class*="audio-trimmer_selector_"] /* <-- don't match record modal */ [class*="audio-trimmer_trim-handle_"] img,
[class*="filter_filter-icon_"],
img[src="/static/assets/7911235b3ccae7b7452ba3da6b5e9c7f.svg"] /* record modal play */,
img[src*="c3RvcC1wbGF5YmFjayI+CiAgICAgICAgICAgICAgICAgICAgICAgIDx1c2UgZmlsbD0iYmxhY2siIGZpbGwtb3BhY2l0eT0iMSIgZmlsdGVyPSJ1cmwoI2ZpbHRlci0yKSIgeGxpbms6aHJlZj0iI3BhdGgtMSI+PC91c2U+CiAgICAgICAgICAgICAgICAgICAgICAgIDx1c2UgZmlsbD0iIzg1NUNENiIg"] /* record modal stop */,
[class*="record-modal_rerecord-button_"] img,
.sa-debugger-tabs li.sa-debugger-tab-selected img {
  filter: var(--editorDarkMode-highlightText-iconFilter);
}
/* ... */

